fixed spacing in panel

--- a/public/panel.html
+++ b/public/panel.html
@@ -7,9 +7,10 @@
         <div id="app" class="full-height"></div>
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
         <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
+		  src="https://code.jquery.com/jquery-3.3.1.min.js"
+		  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+		  crossorigin="anonymous">
+		</script>
         <script src="viewer.js" type="text/javascript"></script>
         <h2>Spinny Boi</h2>
         <p>Spin It to Win It!</p>
