--- a/public/panel.html
+++ b/public/panel.html
@@ -5,6 +5,7 @@
     </head>
     <body style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">
         <div id="app" class="full-height"></div>
+        <link rel="stylesheet" href="viewer.css">
         <script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
         <script
           src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -12,10 +13,8 @@
           crossorigin="anonymous">
 		</script>
         <script src="viewer.js" type="text/javascript"></script>
-        <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ThrowPropsPlugin.min.js'></script>
-        <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/Draggable-latest-beta.js?r=57'></script>
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
-        <h2>Spinny Boi</h2>
+        <script src="propeller.js"></script>
+        <h2 class="header">Spinny Boi</h2>
 <!--         <p>Spin It to Win It!</p>
         <div>
             <input type="button" id="cycle" disabled="disabled" value="SPIN" />
@@ -34,13 +33,20 @@
                 </g>
             </svg><!-- svg source: https://thenounproject.com/term/fidget-spinner/1077097/ -->
         </div>
-<!--         <div style="float: left; position: relative; left: 50%">
-
-            <div id="color" style="border-radius: 50px; transition: background-color 0.5s ease; margin-top: 30px; width: 100px; height: 100px; background-color: #6441A4; float: left; position: relative; left: -50%">
-
-            </div>
-        </div> -->
         <div id="list">
         </div>
     </body>
+    <script>
+        new Propeller('#fidget-spinner', {
+            inertia: 0.985,
+            onrotate: function() {
+                if (window.iphonerotated === undefined) {
+                    setTimeout(function(){
+                        document.getElementById('tip').innerHTML = 'Now feel free to use content';
+                    }, 500);
+                }
+                window.iphonerotated = true;
+            }
+        });
+    </script>
 </html>
